pracaInz/force-app/main/default/objects/Delivery_Order__c/Delivery_Order__c.object-meta.xml
<CustomObject>
    <label>Delivery Order</label>
    <nameField>
        <displayFormat>DO-{0000}</displayFormat>
        <label>Delivery Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>