pracaInz/force-app/main/default/objects/Delivery_Order__c/fields/Pallet__c.field-meta.xml
<CustomField>
    <fullName>Pallet__c</fullName>
    <label>Pallet type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pallet_types</valueSetName>
    </valueSet>
</CustomField>