pracaInz/force-app/main/default/objects/Delivery_Order__c/validationRules/Contract_Must_Be_Signed.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Must_Be_Signed</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Contract__r.Status, &apos;Signed&apos;))</errorConditionFormula>
    <errorMessage>Contract status must be Signed.</errorMessage>
</ValidationRule>